css/less/theme.contrast-light.less
//
// Dark Contrast
// @version 1.4
// @since 1.0
//

/* Contrast stylesheet for when user has a dark background */
@import "../lib/twitter/mixins.less";
@import "variables.less";

body {
	color: @body_color_light;
	background: @body_bg_color_light;
}

h1, 
h2, 
h3, 
h4, 
h5, 
h6 {
	color: @heading_color_light;
}

/* header */
#site-title,
#site-title a {
	color: @site_title_color_light;
}


/* sidebar */
#sidebar {
	color: @sidebar_color;
}

.widget h4.widget-title {
	color: @widget_heading_color;
}

// posts
.breadcrumb {
	background: @breadcrumb_bg_color_light;
	box-shadow: none;
	border-color: @breadcrumb_border_color_light;

    li {
      text-shadow: none;
    }

} // .breadcrumb


.post, 
#comments, 
#pings, 
#no-comments, 
#respond {
	background: @post_bg_color_light;
}

.post-title a, 
.post-title a:visited {
	color: @post_title_color_light;
}

.post-header, 
.post-meta {
	border-color: @post_header_border_color_light;
}

.post.format-status .post-header {
    #gradient.vertical(@post_format_status_post_header_gradient_start_light, @post_format_status_post_header_gradient_end_light);
	.box-shadow(none);
}

.post.format-quote .post-header {
	background-image: url(images/bg-quote-dark.png);
}

.post.format-quote .post-header .entry-content p {
	color: @post_format_quote_header_p_color_light;
}

.post.format-aside .aside-date {
  background: @post_format_aside_color_light;
}

.post.format-chat .post-header {
  background-color: @post_format_chat_post_header_bg_color_light;
  background-image: none;
  .box-shadow(none);
}

.entry-content .wp-caption {
	background: @caption_bg_color_light;
	border: 1px solid @caption_border_color_light;
}

.well {
	background: @well_bg_color_light;
    border: none;
}

/* author box */
#author-box .author-link {
	color: @post_author_box_link_color_light;
}

.page-link {
	border-color: @page_link_color_light;
}

#comments {

  .comment-container .comment-entry .name {
    color: @comment_content_color_light;
  }

  .date a {
    color: @comment_date_link_color_light;
  }

  .comment-container {
    border-color: @comment_content_border_color_light;
  }

  > ol > li > ul.children > li .comment-container {
    border-color: @comment_content_children_border_color_light;
  }

  .bypostauthor > .comment-container {
    background: @comment_by_author_color_light;
    border-right: 5px solid @comment_by_author_border_color_light;
  }

} // #comments

/* sidebar */
table#wp-calendar caption {
	background-color: @calendar_bg_color_light;
	background-color: @calendar_bg_color_rgba_light;
}

.widget_calendar td {
	color: @calendar_color_light;
}

.pager {

  li > {

    a {
      display: inline-block;
      padding: 5px 14px;
      background-color: @pager_bg_color_light;
      border: 1px solid @pager_border_color_light;
      border-radius: 15px;

      &:hover {
        background-color: @pager_bg_color_hover_light;
        color: @pager_border_color_hover_light;
      }

    }

    span {
      padding: 0px;
      background-color: none;
      border: none;
      border-radius: 15px;
    }

  }

}

.pager, .previous-page, .next-page {

  a:hover {
    color: @pager_border_color_hover_light;
  }

}

/* jetpack comments */
.comment-container #respond, #respond {
	background: @widget_jetpack_comment_bg_color_light;
	padding: 20px;
}

// Pages
h2 {
  &#authors, &#pages, &#posts, &#categories {
    .fa-group,
    .fa-calendar,
    .fa-list,
    .fa-list-alt {
      color: @page_template_heading_color_light;
    }
  }
}


/* 404 page */

.error404 #nothing-found h1 {
	color: @nothing_found_color_light;
}

/* footer */

#footer {
	background: @footer_bg_color_light;
}

